Fix overflow of tooltip issue

--- a/src/styles/winbox.scss
+++ b/src/styles/winbox.scss
@@ -92,6 +92,7 @@
   display: inline-flex;
   list-style: none;
   flex-wrap: wrap;
+  padding-right: 3rem;
 }
 
 .techItemsList > li {
